Less laggy Lighting.

--- a/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
+++ b/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=1246,1
-Size=659,729
+Pos=1456,1
+Size=449,608
 Collapsed=0
 
 [Window][OpenGL Debug]
@@ -26,5 +26,10 @@ Collapsed=0
 [Window][Texture]
 Pos=258,8
 Size=1336,657
+Collapsed=0
+
+[Window][Options]
+Pos=60,60
+Size=32,35
 Collapsed=0
 
