--- a/JoshProjects/GraphicsProject/JAGEngine/JAGEngine.vcxproj
+++ b/JoshProjects/GraphicsProject/JAGEngine/JAGEngine.vcxproj
@@ -134,6 +134,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;FT2_BUILD_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)deps\lib\;$(SolutionDir)deps\include;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.2.8726\SDK\include;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.2.8726\SDK\samples\SoundEngine\Win32;$(SolutionDir)WwiseProjects\RacingGame\GeneratedSoundBanks;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.2.8726\SDK\samples\SoundEngine\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
