dialogue app imgui render

--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,5 @@ WwiseProjects/**
 # Code Grabber exclusions
 /JoshProjects/GraphicsProject/Code Grabber/
 /JoshProjects/GraphicsProject/install.bat
+
+/NickProjects/Code Grabber/
