--- a/JoshProjects/GraphicsProject/DialogueSystem/imgui.ini
+++ b/JoshProjects/GraphicsProject/DialogueSystem/imgui.ini
@@ -7,8 +7,8 @@ Pos=100,100
 Size=400,300
 
 [Window][Dialogue Response Editor]
-Pos=50,50
-Size=800,600
+Pos=5,24
+Size=369,397
 
 [Window][Dialogue System Demo]
 Pos=50,670
@@ -27,6 +27,14 @@ Pos=50,50
 Size=400,300
 
 [Window][Dialogue Tree Editor]
-Pos=866,47
-Size=393,603
+Pos=375,23
+Size=908,690
+
+[Window][Dialogue Navigation Test]
+Pos=7,424
+Size=367,290
+
+[Window][API Settings]
+Pos=60,60
+Size=500,200
 
