--- a/JoshProjects/GraphicsProject/DialogueSystem/DialogueSystem.vcxproj.filters
+++ b/JoshProjects/GraphicsProject/DialogueSystem/DialogueSystem.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="standalone_main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DialogueScreen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
